--- a/set-covering.ipynb
+++ b/set-covering.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,14 +19,23 @@
     "from functools import reduce\n",
     "from collections import namedtuple\n",
     "from queue import PriorityQueue, SimpleQueue, LifoQueue\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from math import ceil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 361,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([ True, False, False, False, False]), array([ True,  True,  True, False,  True]), array([False, False, False, False, False]), array([ True, False, False,  True, False]), array([False,  True, False,  True,  True]), array([ True, False,  True, False, False]), array([False, False, False,  True, False]), array([False, False, False, False, False]), array([False,  True, False, False, False]), array([False,  True,  True, False,  True]))\n"
+     ]
+    }
+   ],
    "source": [
     "PROBLEM_SIZE = 5\n",
     "NUM_SETS = 10 \n",
@@ -34,12 +43,13 @@
     "    np.array([random() < 0.3 for _ in range(PROBLEM_SIZE)])\n",
     "    for _ in range(NUM_SETS)\n",
     ")\n",
+    "print(SETS)\n",
     "State = namedtuple('State', ['taken', 'not_taken'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,18 +60,18 @@
     "        np.array([False for _ in range(PROBLEM_SIZE)]),\n",
     "    ))\n",
     "\n",
-    "def distance(state):\n",
-    "    return PROBLEM_SIZE - sum(\n",
-    "        reduce(\n",
-    "            np.logical_or,\n",
-    "            [SETS[i] for i in state.taken],\n",
-    "            np.array([False for _ in range(PROBLEM_SIZE)]),\n",
-    "        ))\n"
+    "def h(state):\n",
+    "    missing_size= PROBLEM_SIZE - sum(reduce(np.logical_or,[SETS[i] for i in state.taken],np.array([False for _ in range(PROBLEM_SIZE)]),))\n",
+    "    larger_set = max(sum(np.logical_and(s,np.logical_not(reduce(np.logical_or,[SETS[i] for i in state.taken],np.array([False for _ in range(PROBLEM_SIZE)]),))))for s in SETS)\n",
+    "    if larger_set == 0: #it is put for avoiding that the next division can be divided for 0, and in this case i will return the missing size as euristic\n",
+    "        return missing_size\n",
+    "    opt_size = ceil(missing_size/larger_set)\n",
+    "    return opt_size\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,21 +82,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 2 steps (2 tiles)\n"
+      "Solved in 5 steps (2 tiles)\n"
      ]
     }
    ],
    "source": [
     "frontier = PriorityQueue()\n",
     "state = State(set(), set(range(NUM_SETS))) \n",
-    "frontier.put((distance(state), state))\n",
+    "frontier.put((h(state), state))\n",
     "\n",
     "counter = 0\n",
     "_, current_state = frontier.get() \n",
@@ -97,7 +107,7 @@
     "            current_state.taken ^ {action},\n",
     "            current_state.not_taken ^ {action},\n",
     "        )\n",
-    "        frontier.put((distance(new_state)+len(new_state.taken), new_state)) #h sarebbe len(new_state.taken) che simboleggia la distanza dal punto iniziale\n",
+    "        frontier.put((h(new_state)+len(new_state.taken), new_state)) #len(new_state.taken) is the cost from the initial point\n",
     "    _, current_state = frontier.get()\n",
     "\n",
     "print(\n",
@@ -107,16 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "State(taken={0, 6}, not_taken={1, 2, 3, 4, 5, 7, 8, 9})"
+       "State(taken={1, 6}, not_taken={0, 2, 3, 4, 5, 7, 8, 9})"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 365,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,16 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ True, False, False,  True, False])"
+       "array([ True, False, False, False, False])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 366,
      "metadata": {},
      "output_type": "execute_result"
     }
