--- a/Halloween.ipynb
+++ b/Halloween.ipynb
@@ -12,10 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 753,
+   "execution_count": 2,
    "id": "3ffe7245-e849-41d0-9698-5f0e0b83fee9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'scipy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Salvatore\\Desktop\\computational\\repository_mia\\Computational-Intelligence\\Halloween.ipynb Cell 2\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Salvatore/Desktop/computational/repository_mia/Computational-Intelligence/Halloween.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mrandom\u001b[39;00m \u001b[39mimport\u001b[39;00m random, randint, shuffle, seed\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Salvatore/Desktop/computational/repository_mia/Computational-Intelligence/Halloween.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Salvatore/Desktop/computational/repository_mia/Computational-Intelligence/Halloween.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscipy\u001b[39;00m \u001b[39mimport\u001b[39;00m sparse\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Salvatore/Desktop/computational/repository_mia/Computational-Intelligence/Halloween.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mrandom\u001b[39;00m \u001b[39mimport\u001b[39;00m random, choice, randint\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Salvatore/Desktop/computational/repository_mia/Computational-Intelligence/Halloween.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfunctools\u001b[39;00m \u001b[39mimport\u001b[39;00m reduce\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
+     ]
+    }
+   ],
    "source": [
     "from itertools import product\n",
     "from random import random, randint, shuffle, seed\n",
@@ -29,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 754,
+   "execution_count": null,
    "id": "6f03bd67-78a0-4d72-95b7-77a918727b91",
    "metadata": {},
    "outputs": [],
@@ -62,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 755,
+   "execution_count": null,
    "id": "64d56c0d",
    "metadata": {},
    "outputs": [],
@@ -73,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 756,
+   "execution_count": null,
    "id": "221ffdba-5d3d-48cc-bd08-45ccc9366ea6",
    "metadata": {},
    "outputs": [],
@@ -85,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 757,
+   "execution_count": null,
    "id": "149aed7c",
    "metadata": {},
    "outputs": [],
@@ -99,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 758,
+   "execution_count": null,
    "id": "0d907cdb",
    "metadata": {},
    "outputs": [],
@@ -129,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 759,
+   "execution_count": null,
    "id": "6492337b-8429-472d-9c3e-c79c5b46da54",
    "metadata": {},
    "outputs": [
@@ -148,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 760,
+   "execution_count": null,
    "id": "5276ac8d",
    "metadata": {},
    "outputs": [
@@ -194,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 761,
+   "execution_count": null,
    "id": "7b0bf013",
    "metadata": {},
    "outputs": [
@@ -239,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 762,
+   "execution_count": null,
    "id": "0dd79ca5",
    "metadata": {},
    "outputs": [
@@ -374,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 763,
+   "execution_count": null,
    "id": "da6f4ef1",
    "metadata": {},
    "outputs": [
@@ -397,19 +409,19 @@
     "last_valid_solution=None\n",
     "while temperature > 0.01:\n",
     "    new_state = tweak(current_state)\n",
-    "\n",
     "    if  fitness2(new_state,x) >= fitness2(current_state,x) or random() < math.exp( -(fitness2(current_state,x)[1]-fitness2(new_state,x)[1])/ temperature):\n",
-    "        current_solution = new_state\n",
-    "\n",
+    "        current_state = new_state\n",
     "        if fitness2(new_state,x)>fitness2(best_solution,x):\n",
-    "            best_solution = current_solution\n",
+    "            best_solution = current_state\n",
     "            best_cost = fitness2(new_state,x)\n",
     "        if fitness2(current_state,x)[0] == PROBLEM_SIZE: #verifico se la soluzione è valida\n",
-    "            last_valid_solution = current_solution\n",
+    "            last_valid_solution = current_state\n",
     "    temperature *= cooling_rate\n",
     "if fitness2(best_solution,x) != PROBLEM_SIZE : \n",
     "    best_solution=last_valid_solution\n",
-    "    \n",
+    "print(fitness2(best_solution,x))\n",
+    "print(fitness2(last_valid_solution,x))\n",
+    "print(best_solution)\n",
     "    print(best_solution,print(fitness2(best_solution,x)))"
    ]
   }
@@ -430,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
