--- a/Halloween.ipynb
+++ b/Halloween.ipynb
@@ -12,22 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3ffe7245-e849-41d0-9698-5f0e0b83fee9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'scipy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Salvatore\\Desktop\\computational\\repository_mia\\Computational-Intelligence\\Halloween.ipynb Cell 2\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Salvatore/Desktop/computational/repository_mia/Computational-Intelligence/Halloween.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mrandom\u001b[39;00m \u001b[39mimport\u001b[39;00m random, randint, shuffle, seed\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Salvatore/Desktop/computational/repository_mia/Computational-Intelligence/Halloween.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Salvatore/Desktop/computational/repository_mia/Computational-Intelligence/Halloween.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscipy\u001b[39;00m \u001b[39mimport\u001b[39;00m sparse\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Salvatore/Desktop/computational/repository_mia/Computational-Intelligence/Halloween.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mrandom\u001b[39;00m \u001b[39mimport\u001b[39;00m random, choice, randint\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Salvatore/Desktop/computational/repository_mia/Computational-Intelligence/Halloween.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfunctools\u001b[39;00m \u001b[39mimport\u001b[39;00m reduce\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from itertools import product\n",
     "from random import random, randint, shuffle, seed\n",
@@ -41,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6f03bd67-78a0-4d72-95b7-77a918727b91",
    "metadata": {},
    "outputs": [],
@@ -74,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "64d56c0d",
    "metadata": {},
    "outputs": [],
@@ -85,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "221ffdba-5d3d-48cc-bd08-45ccc9366ea6",
    "metadata": {},
    "outputs": [],
@@ -97,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "149aed7c",
    "metadata": {},
    "outputs": [],
@@ -111,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0d907cdb",
    "metadata": {},
    "outputs": [],
@@ -141,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6492337b-8429-472d-9c3e-c79c5b46da54",
    "metadata": {},
    "outputs": [
@@ -160,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5276ac8d",
    "metadata": {},
    "outputs": [
@@ -206,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7b0bf013",
    "metadata": {},
    "outputs": [
@@ -251,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0dd79ca5",
    "metadata": {},
    "outputs": [
@@ -386,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "da6f4ef1",
    "metadata": {},
    "outputs": [
@@ -394,8 +382,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(99, -9)\n",
-      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, True, True, False, False, False, True, False, True, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, True, True, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False] None\n"
+      "(100, -10)\n",
+      "(100, -10)\n",
+      "[False, False, False, False, False, True, False, False, False, False, False, False, False, False, True, False, False, False, False, False, False, False, True, False, False, False, True, False, True, False, False, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, True, False, False, False, False, False]\n",
+      "(100, -10)\n",
+      "[False, False, False, False, False, True, False, False, False, False, False, False, False, False, True, False, False, False, False, False, False, False, True, False, False, False, True, False, True, False, False, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, True, False, False, False, False, False] None\n"
      ]
     }
    ],
@@ -422,7 +413,7 @@
     "print(fitness2(best_solution,x))\n",
     "print(fitness2(last_valid_solution,x))\n",
     "print(best_solution)\n",
-    "    print(best_solution,print(fitness2(best_solution,x)))"
+    "print(best_solution,print(fitness2(best_solution,x)))"
    ]
   }
  ],
