--- a/lab2-nim.ipynb
+++ b/lab2-nim.ipynb
@@ -14,13 +14,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -41,7 +34,7 @@
     "\n",
     "## Instructions\n",
     "\n",
-    "* Create the directory `lab2` inside the course repo \n",
+    "* Create the directory `lab2` inside your personal course repository for the course \n",
     "* Put a `README.md` and your solution (all the files, code and auxiliary data if needed)\n",
     "\n",
     "## Notes\n",
@@ -53,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +54,10 @@
     "from pprint import pprint, pformat\n",
     "from collections import namedtuple\n",
     "import random\n",
-    "from copy import deepcopy\n"
+    "from copy import deepcopy\n",
+    "from dataclasses import dataclass\n",
+    "import copy\n",
+    "\n"
    ]
   },
   {
@@ -73,37 +69,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Nimply = namedtuple(\"Nimply\", \"row, num_objects\")\n"
+    "Nimply = namedtuple(\"Nimply\", \"row, num_objects\")\n",
+    "NUM_ROWS = 5\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Nim:\n",
-    "    def __init__(self, num_rows: int, k: int = None) -> None: #Mi crea la piramide\n",
+    "    def __init__(self, num_rows: int, k: int = None) -> None:\n",
     "        self._rows = [i * 2 + 1 for i in range(num_rows)]\n",
     "        self._k = k\n",
     "\n",
-    "    def __bool__(self):   #Mi dice se ho vinto il gioco\n",
+    "    def __bool__(self):\n",
     "        return sum(self._rows) > 0\n",
     "\n",
-    "    def __str__(self): #Stringa per stampare il gioco\n",
+    "    def __str__(self):\n",
     "        return \"<\" + \" \".join(str(_) for _ in self._rows) + \">\"\n",
     "\n",
     "    @property\n",
-    "    def rows(self) -> tuple: #stampa le righe come tuple\n",
+    "    def rows(self) -> tuple:\n",
     "        return tuple(self._rows)\n",
     "\n",
-    "    def nimming(self, ply: Nimply) -> None: #mi cancella gl' elementi decise\n",
+    "    def nimming(self, ply: Nimply) -> None:\n",
     "        row, num_objects = ply\n",
-    "        assert self._rows[row] >= num_objects\n",
+    "        assert self._rows[row] >= num_objects    \n",
     "        assert self._k is None or num_objects <= self._k\n",
     "        self._rows[row] -= num_objects\n"
    ]
@@ -117,20 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pure_random(state: Nim) -> Nimply:\n",
     "    \"\"\"A completely random move\"\"\"\n",
-    "    row = random.choice([r for r, c in enumerate(state.rows) if c > 0])  #r indice della riga, c è l' oggetto della riga\n",
+    "    row = random.choice([r for r, c in enumerate(state.rows) if c > 0])\n",
     "    num_objects = random.randint(1, state.rows[row])\n",
     "    return Nimply(row, num_objects)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,17 +139,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [],
    "source": [
+    "POPULATION_SIZE = 50\n",
+    "NUM_GENERATIONS = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 428,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class Individual:\n",
+    "    genome: tuple\n",
+    "    fitness: int\n",
+    "#Adaptive (1+labmda) - ES\n",
+    "\n",
+    "\n",
+    "population = [\n",
+    "    Individual(\n",
+    "        genome=(0,0), #riga,elementi da togliere è gia una mossa\n",
+    "        fitness=None,\n",
+    "    )\n",
+    "    for _ in range(POPULATION_SIZE)\n",
+    "] \n",
+    "\n",
+    "def generate_child(parent,state:Nim,σ):\n",
+    "    # Applica una mutazione al genoma del genitore\n",
+    "    child_genome = (\n",
+    "        int(parent.genome[0] + np.random.normal(loc=0, scale=σ)),  # Modifica la riga con una mutazione\n",
+    "        int(parent.genome[1] + np.random.normal(loc=0, scale=σ))   # Modifica il numero di oggetti con una mutazione\n",
+    "    )\n",
+    "\n",
+    "    # Assicurati che i valori siano all'interno degli intervalli desiderati\n",
+    "    child_genome = (\n",
+    "        max(0, min(child_genome[0], NUM_ROWS)),   # Assicura che la riga sia compresa tra 0 e max_row\n",
+    "        max(0, min(child_genome[1], state.rows[max(0, min(child_genome[0], NUM_ROWS))]))  # Assicura che il numero di oggetti sia compreso tra 0 e max_objects\n",
+    "    )\n",
+    "\n",
+    "    return Individual(genome=child_genome, fitness=None)\n",
+    "def fitness(individual: Individual, state: Nim):\n",
+    "    temp_state = copy.deepcopy(state)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    temp_state.nimming(Nimply(individual.genome[0],individual.genome[1]))\n",
+    "    odd_rows_with_one_stick = sum(1 for row in temp_state.rows if row % 2 != 0 and row == 1)\n",
+    "\n",
+    "    fitness_score = -odd_rows_with_one_stick\n",
+    "\n",
+    "    return fitness_score\n",
+    "\n",
+    "\n",
+    "def es(state: Nim):\n",
+    "# Iterazione attraverso le generazioni\n",
+    "    λ = 50 #number of children for each iteration\n",
+    "    σ = 0.001 #dev std\n",
+    "    stats = [0,0]\n",
+    "    best_prev_fitness=-9999\n",
+    "    for step in range(NUM_GENERATIONS):\n",
+    "        \n",
+    "        for individual in population:\n",
+    "            individual.fitness = fitness(individual,state)\n",
+    "\n",
+    "        # Ordina la popolazione in base alla fitness (assumendo che un punteggio più alto sia migliore)\n",
+    "        population.sort(key=lambda x: x.fitness, reverse=True)\n",
+    "\n",
+    "        # Seleziona il miglior individuo come genitore\n",
+    "        parent = population[0]\n",
+    "        # Genera λ figli\n",
+    "        children = [generate_child(parent,state,σ) for _ in range(λ)]\n",
+    "        \n",
+    "        # Valuta la fitness dei figli\n",
+    "        stats[0] += λ\n",
+    "        for child in children:\n",
+    "            child.fitness = fitness(child,state)\n",
+    "            stats[1] += int(-child.fitness > -best_prev_fitness) #fitness è negativa\n",
+    "       \n",
+    "        #stats[0] contiene il numero totale di valutazioni di fitness\n",
+    "        #stats[1] cotniene il numero di valutazioni che superano la soluzione corrente\n",
+    "        if stats[1] != 0 and stats[0] / stats[1] < 1 / 5:\n",
+    "            σ /= 1.1\n",
+    "        elif stats[1] != 0 and stats[0] / stats[1] > 1 / 5:\n",
+    "            σ *= 1.1\n",
+    "\n",
+    "        \n",
+    "        population.sort(key=lambda i:i.fitness,reverse=True) \n",
+    "        population[:-λ]=children\n",
+    "\n",
+    "        # Output per vedere la progressione\n",
+    "        best_prev_fitness=population[0].fitness\n",
+    "    # Alla fine dell'evoluzione, il miglior individuo sarà in population[0]\n",
+    "    best_individual = population[0]\n",
+    "    return Nimply(best_individual.genome[0],best_individual.genome[1])\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,117 +276,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 253,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "\n",
-    "\n",
-    "def generate_individual():\n",
-    "    # Genera una strategia casuale\n",
-    "    lambda_value = random.uniform(0.0, 1.0)  # Genera un valore di λ casuale tra 0 e 1\n",
-    "\n",
-    "    individual = {\"lambda\": lambda_value}\n",
-    "\n",
-    "    return individual\n",
-    "\n",
-    "\n",
-    "def generate_population(population_size):\n",
-    "    # Genera una popolazione di individui\n",
-    "    population = [generate_individual() for _ in range(population_size)]\n",
-    "    return population\n",
-    "\n",
-    "def mossa(state: Nim,individual) :\n",
-    "    analysis = analize(state)\n",
-    "        \n",
-    "    spicy_moves = [ply for ply, ns in analysis[\"possible_moves\"].items() if ns != 0]\n",
-    "    if not spicy_moves:\n",
-    "        spicy_moves = list(analysis[\"possible_moves\"].keys())\n",
-    "    max_ply = max(spicy_moves, key=lambda ply: (1 - individual[\"lambda\"]) * analysis[\"possible_moves\"][ply])\n",
-    "    return max_ply\n",
-    "               \n",
-    "\n",
-    "def fitness (individual):\n",
-    "    strategy = (mossa, pure_random)\n",
-    "    num_partite_vinte=0\n",
-    "    for _ in range(0,5):\n",
-    "        nim = Nim(5)\n",
-    "        player = 0\n",
-    "        while nim:\n",
-    "            if strategy[player] == mossa :\n",
-    "                ply=strategy[player](nim,individual)\n",
-    "                nim.nimming(ply)\n",
-    "            else:\n",
-    "                ply = strategy[player](nim)\n",
-    "                nim.nimming(ply)\n",
-    "            player = 1 - player\n",
-    "        if player == 0:\n",
-    "            num_partite_vinte+=1\n",
-    "        else:\n",
-    "            if num_partite_vinte == 0:\n",
-    "                num_partite_vinte-=1\n",
-    "    return num_partite_vinte\n",
-    "\n",
-    "def fitness_population(population) :\n",
-    "    max_fitness=0\n",
-    "    temp_population = []\n",
-    "    for individual in population:\n",
-    "        num_partite_vinte=fitness(individual)\n",
-    "        temp_population.append((individual,num_partite_vinte))\n",
-    "        if max_fitness < num_partite_vinte :\n",
-    "            max_fitness = num_partite_vinte\n",
-    "    final_population = [ind for ind,num_partite_vinte in temp_population if num_partite_vinte == max_fitness]\n",
-    "    return final_population\n",
-    "\n",
-    "\n",
-    "def crossover(parent1,parent2):\n",
-    "    binary_representation_1 = bin(int(parent1[\"lambda\"] * 1000))[2:]\n",
-    "    binary_representation_2 = bin(int(parent2[\"lambda\"]*1000))[2:]\n",
-    "    casual_point = random.randint(1,min(len(binary_representation_1),len(binary_representation_2)))\n",
-    "    figlio_lambda = binary_representation_1[:casual_point] + binary_representation_2[casual_point:]\n",
-    "    figlio_lambda_decimal = int(figlio_lambda,2) / 1000\n",
-    "    figlio = {\"lambda\":figlio_lambda_decimal}\n",
-    "    return figlio\n",
-    "\n",
-    "\n",
-    "def es(num_generations) :\n",
-    "    population = generate_population(100)\n",
-    "    for _ in range(num_generations):\n",
-    "        final_population = fitness_population(population)\n",
-    "        new_population = []\n",
-    "        while len(new_population) < len(population):\n",
-    "            parent1 = random.choice(final_population)\n",
-    "            parent2 = random.choice(final_population)\n",
-    "            figlio = crossover(parent1,parent2)\n",
-    "            new_population.append(figlio)\n",
-    "    population=new_population\n",
-    "    return population\n",
-    "\n",
-    "# def adaptive(state: Nim) -> Nimply:\n",
-    "#     \"\"\"A strategy that can adapt its parameters\"\"\"\n",
-    "#     # Imposta il valore di lambda (λ)\n",
-    "    \n",
-    "\n",
-    "#     analysis = analize(state)\n",
-    "#     logging.debug(f\"analysis:\\n{pformat(analysis)}\")\n",
-    "#     spicy_moves = [ply for ply, ns in analysis[\"possible_moves\"].items() if ns != 0]\n",
-    "#     lambda_decrement = 0.1  # Il valore con cui decrementare lambda per ogni \"spicy move\"\n",
-    "\n",
-    "#     genome = {\"lambda\": 0.5 - (len(spicy_moves)/len(state.rows))*lambda_decrement}\n",
-    "     \n",
-    "#     if not spicy_moves:\n",
-    "#         spicy_moves = list(analysis[\"possible_moves\"].keys())\n",
-    "#         genome = {\"lambda\": 0.5}\n",
-    "    \n",
-    "#     # Trova la mossa ottimale basata sulla somma di Nim tenendo conto di lambda (λ)\n",
-    "#     max_ply = max(spicy_moves, key=lambda ply: (1 - genome[\"lambda\"]) * analysis[\"possible_moves\"][ply])\n",
-    "    \n",
-    "#     return max_ply"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -305,29 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# logging.getLogger().setLevel(logging.INFO)\n",
-    "\n",
-    "# strategy = (adaptive, pure_random)\n",
-    "\n",
-    "# nim = Nim(5)\n",
-    "# logging.info(f\"init : {nim}\")\n",
-    "# player = 0\n",
-    "# while nim:\n",
-    "#     ply = strategy[player](nim)\n",
-    "#     logging.info(f\"ply: player {player} plays {ply}\")\n",
-    "#     nim.nimming(ply)\n",
-    "#     logging.info(f\"status: {nim}\")\n",
-    "#     player = 1 - player\n",
-    "# logging.info(f\"status: Player {player} won!\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [
     {
@@ -335,42 +292,81 @@
      "output_type": "stream",
      "text": [
       "INFO:root:init : <1 3 5 7 9>\n",
-      "INFO:root:ply: player 0 plays Nimply(row=2, num_objects=2)\n",
+      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=0)\n",
+      "INFO:root:status: <1 3 5 7 9>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=2, num_objects=5)\n",
+      "INFO:root:status: <1 3 0 7 9>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=0)\n",
+      "INFO:root:status: <1 3 0 7 9>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=1, num_objects=3)\n",
+      "INFO:root:status: <1 0 0 7 9>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=0)\n",
+      "INFO:root:status: <1 0 0 7 9>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=3, num_objects=3)\n",
+      "INFO:root:status: <1 0 0 4 9>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=0)\n",
+      "INFO:root:status: <1 0 0 4 9>\n",
       "INFO:root:ply: player 1 plays Nimply(row=0, num_objects=1)\n",
-      "INFO:root:ply: player 0 plays Nimply(row=1, num_objects=1)\n",
-      "INFO:root:ply: player 1 plays Nimply(row=1, num_objects=2)\n",
-      "INFO:root:ply: player 0 plays Nimply(row=2, num_objects=2)\n",
-      "INFO:root:ply: player 1 plays Nimply(row=2, num_objects=1)\n",
-      "INFO:root:ply: player 0 plays Nimply(row=3, num_objects=1)\n",
-      "INFO:root:ply: player 1 plays Nimply(row=3, num_objects=6)\n",
-      "INFO:root:ply: player 0 plays Nimply(row=4, num_objects=1)\n",
-      "INFO:root:ply: player 1 plays Nimply(row=4, num_objects=8)\n",
+      "INFO:root:status: <0 0 0 4 9>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=0)\n",
+      "INFO:root:status: <0 0 0 4 9>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=4, num_objects=2)\n",
+      "INFO:root:status: <0 0 0 4 7>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=0)\n",
+      "INFO:root:status: <0 0 0 4 7>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=3, num_objects=2)\n",
+      "INFO:root:status: <0 0 0 2 7>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=0)\n",
+      "INFO:root:status: <0 0 0 2 7>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=4, num_objects=3)\n",
+      "INFO:root:status: <0 0 0 2 4>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=0)\n",
+      "INFO:root:status: <0 0 0 2 4>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=4, num_objects=1)\n",
+      "INFO:root:status: <0 0 0 2 3>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=0)\n",
+      "INFO:root:status: <0 0 0 2 3>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=3, num_objects=1)\n",
+      "INFO:root:status: <0 0 0 1 3>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=0)\n",
+      "INFO:root:status: <0 0 0 1 3>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=3, num_objects=1)\n",
+      "INFO:root:status: <0 0 0 0 3>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=0)\n",
+      "INFO:root:status: <0 0 0 0 3>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=4, num_objects=2)\n",
+      "INFO:root:status: <0 0 0 0 1>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=0)\n",
+      "INFO:root:status: <0 0 0 0 1>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=4, num_objects=1)\n",
+      "INFO:root:status: <0 0 0 0 0>\n",
       "INFO:root:status: Player 0 won!\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "#valutazione evolutionary algorithm\n",
-    "evolutionary_population = es(5)\n",
     "logging.getLogger().setLevel(logging.INFO)\n",
     "\n",
-    "strategy = (mossa, gabriele)\n",
-    "individual=random.choice(evolutionary_population)\n",
+    "strategy = (es, random)\n",
+    "\n",
     "nim = Nim(5)\n",
     "logging.info(f\"init : {nim}\")\n",
     "player = 0\n",
     "while nim:\n",
-    "    if strategy[player] == mossa :\n",
-    "        ply=strategy[player](nim,individual)\n",
-    "        nim.nimming(ply)\n",
-    "    else:\n",
-    "        ply = strategy[player](nim)\n",
-    "        nim.nimming(ply)\n",
+    "    ply = strategy[player](nim)\n",
     "    logging.info(f\"ply: player {player} plays {ply}\")\n",
+    "    nim.nimming(ply)\n",
+    "    logging.info(f\"status: {nim}\")\n",
     "    player = 1 - player\n",
     "logging.info(f\"status: Player {player} won!\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
