--- a/lab2-nim.ipynb
+++ b/lab2-nim.ipynb
@@ -162,23 +162,23 @@
     "\n",
     "population = [\n",
     "    Individual(\n",
-    "        genome=(0,0), #riga,elementi da togliere è gia una mossa\n",
+    "        genome=(0,0), #(row,elements to remove) it is a play\n",
     "        fitness=None,\n",
     "    )\n",
     "    for _ in range(POPULATION_SIZE)\n",
     "] \n",
     "\n",
     "def generate_child(parent,state:Nim,σ):\n",
-    "    # Applica una mutazione al genoma del genitore\n",
+    "\n",
     "    child_genome = (\n",
-    "        int(parent.genome[0] + np.random.normal(loc=0, scale=σ)),  # Modifica la riga con una mutazione\n",
-    "        int(parent.genome[1] + np.random.normal(loc=0, scale=σ))   # Modifica il numero di oggetti con una mutazione\n",
+    "        int(parent.genome[0] + np.random.normal(loc=0, scale=σ)),\n",
+    "        int(parent.genome[1] + np.random.normal(loc=0, scale=σ))  \n",
     "    )\n",
     "\n",
-    "    # Assicurati che i valori siano all'interno degli intervalli desiderati\n",
+    "   \n",
     "    child_genome = (\n",
-    "        max(0, min(child_genome[0], NUM_ROWS)),   # Assicura che la riga sia compresa tra 0 e max_row\n",
-    "        max(0, min(child_genome[1], state.rows[max(0, min(child_genome[0], NUM_ROWS))]))  # Assicura che il numero di oggetti sia compreso tra 0 e max_objects\n",
+    "        max(0, min(child_genome[0], NUM_ROWS)),   # it assures that the row is between  0 and max_row\n",
+    "        max(0, min(child_genome[1], state.rows[max(0, min(child_genome[0], NUM_ROWS))]))  # it assures that the number of object is between 0 and max_objects\n",
     "    )\n",
     "    return Individual(genome=child_genome, fitness=None)\n",
     "\n",
@@ -195,8 +195,8 @@
     "\n",
     "\n",
     "def es(state: Nim):\n",
-    "# Iterazione attraverso le generazioni\n",
-    "    λ = 50 #number of children for each iteration\n",
+    "\n",
+    "    λ = 50 \n",
     "    σ = 0.001 #dev std\n",
     "    stats = [0,0]\n",
     "    best_prev_fitness=-9999\n",
@@ -205,22 +205,22 @@
     "        for individual in population:\n",
     "            individual.fitness = fitness(individual,state)\n",
     "\n",
-    "        # Ordina la popolazione in base alla fitness (assumendo che un punteggio più alto sia migliore)\n",
+    "        \n",
     "        population.sort(key=lambda x: x.fitness, reverse=True)\n",
     "\n",
-    "        # Seleziona il miglior individuo come genitore\n",
+    "        # Select best individual as parent\n",
     "        parent = population[0]\n",
     "        # Genera λ figli\n",
     "        children = [generate_child(parent,state,σ) for _ in range(λ)]\n",
     "        \n",
-    "        # Valuta la fitness dei figli\n",
+    "        # Evaluating children fitness\n",
     "        stats[0] += λ\n",
     "        for child in children:\n",
     "            child.fitness = fitness(child,state)\n",
-    "            stats[1] += int(-child.fitness > -best_prev_fitness) #fitness è negativa\n",
+    "            stats[1] += int(-child.fitness > -best_prev_fitness) #because the fitness is negative value\n",
     "       \n",
-    "        #stats[0] contiene il numero totale di valutazioni di fitness\n",
-    "        #stats[1] cotniene il numero di valutazioni che superano la soluzione corrente\n",
+    "        #stats[0] total number of fitness evaluations\n",
+    "        #stats[1] number of evaluations that are greater than the current one\n",
     "        if stats[1] != 0 and stats[0] / stats[1] < 1 / 5:\n",
     "            σ /= 1.1\n",
     "        elif stats[1] != 0 and stats[0] / stats[1] > 1 / 5:\n",
@@ -230,9 +230,9 @@
     "        population.sort(key=lambda i:i.fitness,reverse=True) \n",
     "        population[:-λ]=children\n",
     "\n",
-    "        # Output per vedere la progressione\n",
+    "        \n",
     "        best_prev_fitness=population[0].fitness\n",
-    "    # Alla fine dell'evoluzione, il miglior individuo sarà in population[0]\n",
+    "   \n",
     "    best_individual = population[0]\n",
     "    return Nimply(best_individual.genome[0],best_individual.genome[1])\n",
     "\n",
@@ -392,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
