--- a/lab2.1-fixed-nim.ipynb
+++ b/lab2.1-fixed-nim.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "## Instructions\n",
     "\n",
-    "* Create the directory `lab2` inside the course repo \n",
+    "* Create the directory `lab2` inside your personal course repository for the course \n",
     "* Put a `README.md` and your solution (all the files, code and auxiliary data if needed)\n",
     "\n",
     "## Notes\n",
@@ -46,15 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 605,
    "metadata": {},
    "outputs": [],
    "source": [
     "import logging\n",
     "from pprint import pprint, pformat\n",
     "from collections import namedtuple\n",
-    "import random\n",
-    "from copy import deepcopy\n"
+    "from copy import deepcopy\n",
+    "from dataclasses import dataclass\n",
+    "import copy\n",
+    "from random import randint\n"
    ]
   },
   {
@@ -66,16 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 606,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Nimply = namedtuple(\"Nimply\", \"row, num_objects\")\n"
+    "Nimply = namedtuple(\"Nimply\", \"row, num_objects\")\n",
+    "NUM_ROWS = 5\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 607,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +99,7 @@
     "\n",
     "    def nimming(self, ply: Nimply) -> None:\n",
     "        row, num_objects = ply\n",
-    "        assert self._rows[row] >= num_objects\n",
+    "        assert self._rows[row] >= num_objects    \n",
     "        assert self._k is None or num_objects <= self._k\n",
     "        self._rows[row] -= num_objects\n"
    ]
@@ -110,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 608,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 609,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,18 +138,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 610,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def adaptive(state: Nim) -> Nimply:\n",
-    "    \"\"\"A strategy that can adapt its parameters\"\"\"\n",
-    "    genome = {\"love_small\": 0.5}\n"
+    "POPULATION_SIZE = 50\n",
+    "NUM_GENERATIONS = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 611,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class Individual:\n",
+    "    genome: float\n",
+    "    fitness: int\n",
+    "#Adaptive (1+labmda) - ES\n",
+    "\n",
+    "population = [\n",
+    "    Individual(\n",
+    "        genome=0.5,\n",
+    "        fitness=None,\n",
+    "    )\n",
+    "    for _ in range(POPULATION_SIZE)\n",
+    "]\n",
+    "\n",
+    "def generate_valid_move(state: Nim, ind: Individual) -> tuple:\n",
+    "    #The row is cho0sen based on genome value\n",
+    "    row = int(ind.genome * (NUM_ROWS - 1))\n",
+    "\n",
+    "    #We assure that the move is valid by selecting the next row valid\n",
+    "    while state.rows[row] == 0:\n",
+    "        row = (row+1)%NUM_ROWS\n",
+    "\n",
+    "    #We use the genome to determine the number of objects to take\n",
+    "    num_objects = int((ind.genome * (NUM_ROWS - 1)) * state.rows[row]) + 1\n",
+    "    num_objects = max(1, min(num_objects, state.rows[row]))\n",
+    "\n",
+    "    return row, num_objects\n",
+    "\n",
+    "\n",
+    "def generate_child(parent, state: Nim, σ):\n",
+    "    \n",
+    "    child_genome = (\n",
+    "        parent.genome + np.random.normal(loc=0, scale=σ)\n",
+    "    )\n",
+    "\n",
+    "    return Individual(genome=child_genome, fitness=None)\n",
+    "\n",
+    "\n",
+    "def fitness(individual: Individual, state: Nim):\n",
+    "    temp_state = copy.deepcopy(state)\n",
+    "    (row,num_objects) = generate_valid_move(state,individual)\n",
+    "    temp_state.nimming(Nimply(row, num_objects))\n",
+    "\n",
+    "    num_rows_not_zero = sum(1 for row in temp_state.rows if row != 0)\n",
+    "    odd_rows_with_one_stick = sum(1 for row in temp_state.rows if num_rows_not_zero % 2 != 0 and row == 1)\n",
+    "    penalty_for_single_stick_rows = sum(1 for row in temp_state.rows if row == 1)\n",
+    "    incentive_for_remaining_sticks = sum(temp_state.rows)\n",
+    "    fitness_score = -odd_rows_with_one_stick + penalty_for_single_stick_rows - incentive_for_remaining_sticks\n",
+    "\n",
+    "    return fitness_score\n",
+    "\n",
+    "\n",
+    "\n",
+    "def es(state: Nim):\n",
+    "\n",
+    "    λ = 50 \n",
+    "    σ = 0.001 #dev std\n",
+    "    stats = [0,0]\n",
+    "    best_prev_fitness=-9999\n",
+    "    for step in range(NUM_GENERATIONS):\n",
+    "        \n",
+    "        for individual in population:\n",
+    "            individual.fitness = fitness(individual,state)\n",
+    "\n",
+    "        \n",
+    "        population.sort(key=lambda x: x.fitness, reverse=True)\n",
+    "\n",
+    "        # Select best individual as parent\n",
+    "        parent = population[0]\n",
+    "        # Genera λ figli\n",
+    "        children = [generate_child(parent,state,σ) for _ in range(λ)]\n",
+    "        # Evaluating children fitness\n",
+    "        stats[0] += λ\n",
+    "        for child in children:\n",
+    "            child.fitness = fitness(child,state)\n",
+    "            stats[1] += int(-child.fitness > -best_prev_fitness) #because the fitness is negative value\n",
+    "       \n",
+    "        #stats[0] total number of fitness evaluations\n",
+    "        #stats[1] number of evaluations that are greater than the current one\n",
+    "        if stats[1] != 0 and stats[0] / stats[1] < 1 / 5:\n",
+    "            σ /= 1.1\n",
+    "        elif stats[1] != 0 and stats[0] / stats[1] > 1 / 5:\n",
+    "            σ *= 1.1\n",
+    "\n",
+    "        \n",
+    "        population.sort(key=lambda i:i.fitness,reverse=True) \n",
+    "        population[:-λ]=children\n",
+    "\n",
+    "        \n",
+    "        best_prev_fitness=population[0].fitness\n",
+    "   \n",
+    "    best_individual = population[0]\n",
+    "    (row,num_objects) = generate_valid_move(state,best_individual)\n",
+    "    return Nimply(row,num_objects)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 612,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 613,
    "metadata": {},
    "outputs": [
     {
@@ -196,32 +302,28 @@
      "output_type": "stream",
      "text": [
       "INFO:root:init : <1 3 5 7 9>\n",
-      "INFO:root:ply: player 0 plays Nimply(row=1, num_objects=1)\n",
-      "INFO:root:status: <1 2 5 7 9>\n",
-      "INFO:root:ply: player 1 plays Nimply(row=4, num_objects=6)\n",
-      "INFO:root:status: <1 2 5 7 3>\n",
-      "INFO:root:ply: player 0 plays Nimply(row=2, num_objects=5)\n",
-      "INFO:root:status: <1 2 0 7 3>\n",
-      "INFO:root:ply: player 1 plays Nimply(row=0, num_objects=1)\n",
-      "INFO:root:status: <0 2 0 7 3>\n",
-      "INFO:root:ply: player 0 plays Nimply(row=4, num_objects=3)\n",
-      "INFO:root:status: <0 2 0 7 0>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=1)\n",
+      "INFO:root:status: <0 3 5 7 9>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=2, num_objects=5)\n",
+      "INFO:root:status: <0 3 0 7 9>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=1, num_objects=3)\n",
+      "INFO:root:status: <0 0 0 7 9>\n",
       "INFO:root:ply: player 1 plays Nimply(row=3, num_objects=7)\n",
-      "INFO:root:status: <0 2 0 0 0>\n",
-      "INFO:root:ply: player 0 plays Nimply(row=1, num_objects=1)\n",
-      "INFO:root:status: <0 1 0 0 0>\n",
-      "INFO:root:ply: player 1 plays Nimply(row=1, num_objects=1)\n",
+      "INFO:root:status: <0 0 0 0 9>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=4, num_objects=9)\n",
       "INFO:root:status: <0 0 0 0 0>\n",
-      "INFO:root:status: Player 0 won!\n"
+      "INFO:root:status: Player 1 won!\n"
      ]
     }
    ],
    "source": [
     "logging.getLogger().setLevel(logging.INFO)\n",
     "\n",
-    "strategy = (optimal, es)\n",
+    "strategy = (gabriele, es)\n",
     "\n",
     "nim = Nim(5)\n",
+    "\n",
+    "\n",
     "logging.info(f\"init : {nim}\")\n",
     "player = 0\n",
     "while nim:\n",
